# typogenetics

./: LICENSE  README.md  extensions.md  notes.md  pyproject.toml  spec.md
.github/workflows/: ci.yaml
src/typogenetics/: cli.py  search.py  typogenetics.py
tests/: test_search.py  test_typogenetics.py
typogenetics/: cli.py  search.py  typogenetics.py
typogenetics/cli/: cli.py
typogenetics/lib/: main.py  typogenetics.py
