[project]
authors = [
    { name = "Chris Gregory", email = "christopher.b.gregory@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=8.2.1", "numpy>=2.3.0"]
description = "Artificial genetics simulation."
keywords = ["artificial", "genetics", "simulation"]
name = "typogenetics"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.urls]
Repository = "https://github.com/gregorybchris/typogenetics"

[project.scripts]
typo = "typogenetics.cli:main"

[dependency-groups]
dev = ["black>=25.1.0", "mypy>=1.16.0", "pylint>=3.3.7", "pytest>=8.4.0"]

[tool.hatch.build.targets.sdist]
include = ["typogenetics"]

[tool.hatch.build.targets.wheel]
include = ["typogenetics"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
src_paths = "*"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["f", "i"]
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "logging-fstring-interpolation",
]

[tool.pylint.reports]
output-format = "colorized"
